# ChangeLog file for MonetDB
# This file is updated with Maddlog

* Thu Dec 17 2015 Sjoerd Mullender <sjoerd@acm.org>
- Changed BATderiveHeadProps to BATderiveTailProps (and it now works on
  the tail column).
- Removed unused functions BATalpha, BATdelta, and BATprev.

* Mon Dec 14 2015 Sjoerd Mullender <sjoerd@acm.org>
- Removed functions BATins, BATdel, BUNdel and BUNdelete.

* Fri Dec 11 2015 Sjoerd Mullender <sjoerd@acm.org>
- Removed function VIEWcombine.  Use BATdense instead.
- Removed "left" parameter from BUNinplace.  It wasn't used since the
  BAT it works on is dense headed.
- Created function BATdense to easily create a [void,void] BAT with
  specified seqbases for head and tail and a count.
- Removed function BATmark.  When all head columns are dense, BATmark
  basically only created a new [void,void] BAT.
- Renamed BATsubsort to BATsort.

* Thu Dec  3 2015 Sjoerd Mullender <sjoerd@acm.org>
- Removed "sub" from the names of the function BATsubselect,
  BATthetasubselect, BATsubcross, BATsubleftjoin, BATsubouterjoin,
  BATsubthetajoin, BATsubsemijoin, BATsubdiff, BATsubjoin, BATsubbandjoin,
  BATsubrangejoin, and BATsubunique.
- Removed BATsubleftfetchjoin: it was not used.
- Removed BATcross1.  Use BATsubcross instead.

* Thu Oct  8 2015 Sjoerd Mullender <sjoerd@acm.org>
- Removed all versions of the SORTloop macro.

* Thu Oct  1 2015 Sjoerd Mullender <sjoerd@acm.org>
- Removed Batkdiff.  Use BATsubdiff instead.

* Wed Sep 16 2015 Sjoerd Mullender <sjoerd@acm.org>
- Removed BATselect.  Use BATsubselect instead.
- Removed BATsemijoin.  Use BATsubsemijoin instead.
- Removed BATjoin.  Use BATsubjoin instead.
- Removed BATleftjoin.  Use BATsubleftjoin or BATproject instead.
- Removed BATleftfetchjoin.  Use BATproject instead.
- Removed BUNins from the list of exported functions.

* Thu Sep 10 2015 Sjoerd Mullender <sjoerd@acm.org>
- Removed legacy functions BATuselect and BATuselect_.
- Removed legacy functions BATantijoin, BATbandjoin, BATouterjoin,