@@ -201,7 +201,6 @@ void BBPunlock(const char *s);
 gdk_return BUNappend(BAT *b, const void *right, bit force);
 BUN BUNfnd(BAT *b, const void *right);
 gdk_return BUNinplace(BAT *b, BUN p, const void *right, bit force);
-gdk_return BUNreplace(BAT *b, const void *left, const void *right, bit force);
 BAT *COLcopy(BAT *b, int tt, int writeable, int role);
 size_t GDK_mem_maxsize;
 size_t GDK_vm_maxsize;
