@@ -1062,7 +1062,7 @@ BUNinplace(BAT *b, BUN p, const void *t, bit force)
 
 	/* uncommitted BUN elements */
 
-	ALIGNinp(b, "BUNreplace", force, GDK_FAIL);	/* zap alignment info */
+	ALIGNinp(b, "BUNinplace", force, GDK_FAIL);	/* zap alignment info */
 	if (b->T->nil &&
 	    atom_CMP(BUNtail(bi, p), ATOMnilptr(b->ttype), b->ttype) == 0 &&
 	    atom_CMP(t, ATOMnilptr(b->ttype), b->ttype) != 0) {
@@ -1122,57 +1122,47 @@ BUNinplace(BAT *b, BUN p, const void *t, bit force)
 	return GDK_FAIL;
 }
 
+/* very much like void_inplace, except this materializes a void tail
+ * column if necessarry */
 gdk_return
-BUNreplace(BAT *b, const void *h, const void *t, bit force)
+BUNreplace(BAT *b, oid id, const void *t, bit force)
 {
-	BUN p;
-
 	BATcheck(b, "BUNreplace", GDK_FAIL);
-	BATcheck(h, "BUNreplace: head value is nil", GDK_FAIL);
 	BATcheck(t, "BUNreplace: tail value is nil", GDK_FAIL);
 
-	if ((p = BUNfnd(BATmirror(b), h)) == BUN_NONE)
+	if (id < b->hseqbase || id >= b->hseqbase + BATcount(b))
 		return GDK_SUCCEED;
 
 	if ((b->tkey & BOUND2BTRUE) && BUNfnd(b, t) != BUN_NONE) {
 		return GDK_SUCCEED;
 	}
 	if (b->ttype == TYPE_void) {
-		BUN i;
-
 		/* no need to materialize if value doesn't change */
-		if (b->tseqbase == oid_nil || (b->hseqbase + p) == *(oid *) t)
+		if (b->tseqbase == oid_nil ||
+		    b->tseqbase + id - b->hseqbase == *(const oid *) t)
 			return GDK_SUCCEED;
-		i = p;
 		if (BATmaterialize(b) != GDK_SUCCEED)
 			return GDK_FAIL;
-		p = i;
 	}
 
-	return BUNinplace(b, p, t, force);
+	return BUNinplace(b, id - b->hseqbase + BUNfirst(b), t, force);
 }
 
+/* very much like BUNreplace, but this doesn't make any changes if the
+ * tail column is void */
 gdk_return
 void_inplace(BAT *b, oid id, const void *val, bit force)
 {
-	gdk_return res = GDK_SUCCEED;
-	BUN p = BUN_NONE;
-	BUN oldInserted = b->batInserted;
-	BAT *bm = BATmirror(b);
-
-	assert(b->htype == TYPE_void);
-	assert(b->hseqbase != oid_nil);
-	assert(b->batCount > (id - b->hseqbase));
-
-	b->batInserted = 0;
-	p = BUNfndVOID(bm, &id);
-
-	assert(force || p >= b->batInserted);	/* we don't want delete/ins */
-	assert(force || !b->batRestricted);
-	res = BUNinplace(b, p, val, force);
-
-	b->batInserted = oldInserted;
-	return res;
+	assert(id >= b->hseqbase && id < b->hseqbase + BATcount(b));
+	if (id < b->hseqbase || id >= b->hseqbase + BATcount(b)) {
+		GDKerror("void_inplace: id out of range\n");
+		return GDK_FAIL;
+	}
+	if ((b->tkey & BOUND2BTRUE) && BUNfnd(b, val) != BUN_NONE)
+		return GDK_SUCCEED;
+	if (b->ttype == TYPE_void)
+		return GDK_SUCCEED;
+	return BUNinplace(b, id - b->hseqbase + BUNfirst(b), val, force);
 }
 
 BUN
